syntax = "proto3";
package models;

import "google/protobuf/timestamp.proto";

option go_package = "./server/models";

message WebAuthnCredential {
  bytes credential_id = 1;
  bytes public_key_der = 2;
  repeated string transports = 3;
  // Authenticator
  bytes aaguid = 4;
  uint32 sign_count = 5;
  bool clone_warning = 6;
  string attachment = 7;
  // CredentialFlags
  bool flag_user_present = 8;
  bool flag_user_verified = 9;
  bool flag_backup_eligible = 10;
  bool flag_backup_state = 11;
}

// Ref: "cred:$id" -> Credential
// Ref: "user:$user_id:cred:$id" -> []
message Credential {
  string id = 1;
  string user_id = 2;
  string name = 3;
  google.protobuf.Timestamp created_at = 4;
  string created_by_session_id = 6;
  google.protobuf.Timestamp last_used_at = 7;
  repeated string used_by_session_ids = 8;

  oneof type {
    WebAuthnCredential webauthn_credential = 5;
  }
}
